@@ -7,14 +7,10 @@ from zope.component import queryUtility
 from repoze.bfg.interfaces import IRendererFactory
 from repoze.bfg.interfaces import ITemplateRenderer
 
+from repoze.bfg.compat import json
 from repoze.bfg.path import caller_package
 from repoze.bfg.resource import resource_spec
 from repoze.bfg.settings import get_settings
-
-try:
-    import json
-except ImportError:
-    import simplejson as json
 
 # concrete renderer factory implementations
 
