@@ -1,9 +1,4 @@
-try:
-    from functools import wraps
-except ImportError:                         #pragma NO COVERAGE
-    # < 2.5
-    from repoze.bfg.functional import wraps #pragma NO COVERAGE
-
+from repoze.bfg.compat import wraps
 from repoze.bfg.traversal import quote_path_segment
 
 def wsgiapp(wrapped):
